--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <h2>main3</h2>
 
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
 </body>
 </html>
