--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test5</title>
-    <title>test5</title>
-    <title>test6</title>
 </head>
+
 <body>
-    
+
+    <section class="main">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum ut harum aliquid aut quae expedita eum autem
+            dignissimos fugiat excepturi! Voluptas explicabo nostrum cum aut placeat dicta architecto laboriosam
+            expedita!</p>
+    </section>
 </body>
+
 </html>
