--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum ut harum aliquid aut quae expedita eum autem
             dignissimos fugiat excepturi! Voluptas explicabo nostrum cum aut placeat dicta architecto laboriosam
             expedita!</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum ut harum aliquid aut quae expedita eum autem
+            dignissimos fugiat excepturi! Voluptas explicabo nostrum cum aut placeat dicta architecto laboriosam
+            expedita!</p>
     </section>
 </body>
 
