--- a/index.html
+++ b/index.html
@@ -11,10 +11,19 @@
     <section class="main">
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum ut harum aliquid aut quae expedita eum autem
             dignissimos fugiat excepturi! Voluptas explicabo nostrum cum aut placeat dicta architecto laboriosam
-            expedita!</p>
+            expedita!
+        </p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum ut harum aliquid aut quae expedita eum autem
             dignissimos fugiat excepturi! Voluptas explicabo nostrum cum aut placeat dicta architecto laboriosam
-            expedita!</p>
+            expedita!
+        </p>
+    </section>
+
+    <section class="develop">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad cum mollitia optio vel ipsum nesciunt dolorum?
+            At, asperiores saepe optio aspernatur quis voluptates voluptatem, rerum architecto provident repudiandae
+            aliquid ipsa?</p>
+        <span>123</span>
     </section>
 </body>
 
