--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
             dignissimos fugiat excepturi! Voluptas explicabo nostrum cum aut placeat dicta architecto laboriosam
             expedita!</p>
     </section>
+
+    <section class="body">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, accusamus nemo. Ad animi amet error ipsa
+            maiores illum sunt repellendus nobis modi cum tempore harum, pariatur cupiditate vel officiis! Vitae.</p>
+    </section>
 </body>
 
 </html>
