--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, accusamus nemo. Ad animi amet error ipsa
             maiores illum sunt repellendus nobis modi cum tempore harum, pariatur cupiditate vel officiis! Vitae.</p>
     </section>
+
+    <section class="footer">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex, eius minus esse harum libero totam labore, quas
+            autem est numquam hic vero? Cum adipisci vel assumenda amet beatae optio aliquid.</p>
+    </section>
 </body>
 
 </html>
