--- a/index.html
+++ b/index.html
@@ -6,25 +6,15 @@
     <title>test5</title>
 </head>
 <body>
-    <h2>main</h2>
-    <h2>main2</h2>
-    <h2>main2</h2>
-    <h2>main3</h2>
-    <h2>main3</h2>
-
-
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-
-
-    
-    <h2>main4</h2>
-    <h2>main5</h2>
-    <h2>main6</h2>
-    <h2>main7</h2>
-    <h2>main8</h2>
+    <section class="main">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum ut harum aliquid aut quae expedita eum autem
+            dignissimos fugiat excepturi! Voluptas explicabo nostrum cum aut placeat dicta architecto laboriosam
+            expedita!
+        </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum ut harum aliquid aut quae expedita eum autem
+            dignissimos fugiat excepturi! Voluptas explicabo nostrum cum aut placeat dicta architecto laboriosam
+            expedita!
+        </p>
+    </section>
 </body>
 </html>
