--- a/signUp/index.html
+++ b/signUp/index.html
@@ -36,7 +36,7 @@
                             </label>
                             <input id="pwd" type="text" placeholder="Password">
                         </div>
-                        <a class="forgot__pass" href="#">Forgot password?</a>
+                        <p class="forgot__pass"><a href="#">Forgot password?</a></p>
                         <button type="submit">Log in</button>
                         <div class="social__btns">
                             <button>
