kronix design updated

--- a/Kronix/index.html
+++ b/Kronix/index.html
@@ -141,17 +141,16 @@
         </section>
     </main>
 
-    <!-- <footer>
+    <footer>
         <div class="container">
             <div class="agency__items">
                 <div class="agency__item">
                     <div class="logo extra">
                         <a href="#">
-                            <span>Kro</span>
-                            <span>nix</span>
+                            <span>Kro</span><span>nix</span>
                         </a>
                     </div>
-                    <p>Kornix - the leading digital agency based in the UK, working with top-tier clients, from
+                    <p class="agency__item-content">Kornix - the leading digital agency based in the UK, working with top-tier clients, from
                         start-ups to enterprises.
                     </p>
                 </div>
@@ -191,7 +190,7 @@
                 </div>
             </nav>
         </div>
-    </footer> -->
+    </footer>
 </body>
 
 </html>
