contact form styling

--- a/contactForm/index.html
+++ b/contactForm/index.html
@@ -86,28 +86,32 @@
                             <legend>Select Subject?</legend>
                             <div class="form__radio-items">
                                 <div class="form__radio-item">
-                                    <label for="radio-1">General Inquiry</label>
-                                    <input type="radio" name="radio" id="radio-1">
-                                    <span></span>
+                                    <label for="radio-1">General Inquiry
+                                        <input type="radio" name="radio" id="radio-1">
+                                        <span></span>
+                                    </label>
                                 </div>
                                 <div class="form__radio-item">
-                                    <label for="radio-2">General Inquiry</label>
-                                    <input type="radio" name="radio" id="radio-2">
-                                    <span></span>
+                                    <label for="radio-2">General Inquiry
+                                        <input type="radio" name="radio" id="radio-2" checked>
+                                        <span></span>
+                                    </label>
                                 </div>
                                 <div class="form__radio-item">
-                                    <label for="radio-3">General Inquiry</label>
-                                    <input type="radio" name="radio" id="radio-3">
-                                    <span></span>
+                                    <label for="radio-3">General Inquiry
+                                        <input type="radio" name="radio" id="radio-3">
+                                        <span></span>
+                                    </label>
                                 </div>
                                 <div class="form__radio-item">
-                                    <label for="radio-4">General Inquiry</label>
-                                    <input type="radio" name="radio" id="radio-4">
-                                    <span></span>
+                                    <label for="radio-4">General Inquiry
+                                        <input type="radio" name="radio" id="radio-4">
+                                        <span></span>
+                                    </label>
                                 </div>
                             </div>
                             <label for="message">Message</label>
-                            <textarea id="message" placeholder="">Write your message..</textarea>
+                            <textarea id="message" placeholder="Write your message.."></textarea>
                             <div class="form__btn-cover">
                                 <button type="submit">Send Message</button>
                             </div>
